dev: rename all rulex to rhilex

--- a/conf/rhilex.ini
+++ b/conf/rhilex.ini
@@ -1,23 +1,38 @@
-#-----------------------------------------------------
-# Basic Config
-#-----------------------------------------------------
+#------------------------------------------------------------------------------
+;  Copyright (C) 2023 wwhai
+;
+;  This program is free software: you can redistribute it and/or modify
+;  it under the terms of the GNU Affero General Public License as
+;  published by the Free Software Foundation, either version 3 of the
+;  License, or (at your option) any later version.
+;
+;  This program is distributed in the hope that it will be useful,
+;  but WITHOUT ANY WARRANTY; without even the implied warranty of
+;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;  GNU Affero General Public License for more details.
+;
+;  You should have received a copy of the GNU Affero General Public License
+;  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#------------------------------------------------------------------------------
 [app]
 #
 # App name
 #
-app_name = rulex
+app_name = rhilex
 #
 # App ID
 #
-app_id = rulex
+app_id = rhilex
 #
-# If enabled, log will output to console, other log to file
+# If enabled, log will output to console instead of log file
+# This option most used to debug exception
 #
-enable_console = true
+enable_console = false
 #
-# If enabled, will output a lot of log message
+# If enabled, will output more detail but a lot of log message
+# This option most used to debug exception
 #
-app_debug_mode = true
+app_debug_mode = false
 #
 # Log level:
 #    fatal
@@ -26,15 +41,27 @@ app_debug_mode = true
 #    debug
 #    info
 #
-log_level = all
+log_level = info
 #
 # log path
 #
-log_path = rulex-log.txt
+log_path = rulexlog
 #
-# lua log path
+# Will compress log file when size(Mb) greater than config value
 #
-lua_log_path = rulex-lua-log.txt
+log_max_size = 5
+#
+# Default count of saved Log file
+#
+log_max_backups = 2
+#
+# Max Save Interval of Log file
+#
+log_max_age = 7
+#
+# Will Compress log file to .gz format
+#
+log_compress = true
 #
 # Max data cache size
 #
@@ -62,15 +89,16 @@ enable_pprof = false
 # App Remote Update Server
 #
 update_server = http://localhost:8088/rulex
-#-----------------------------------------------------
-# External Lua Script
-#-----------------------------------------------------
+#
+# CPU load Upper limit, 80%
+#
+cpu_load_upper_limit = 80
+
 [extlibs]
 luafile=./extlualibs/hello.lua
-
-#-----------------------------------------------------
+#
 # Buildin Plugins Config
-#-----------------------------------------------------
+#
 [plugin]
 #
 # RULEX http api providor
@@ -89,17 +117,13 @@ host = 0.0.0.0
 #
 port = 2580
 #
-# Server port
-#
-dbpath = ./rulex.db
-#
 # Lightweight Mqtt protocol server
 #
 [plugin.mqtt_server]
 #
 # Enable
 #
-enable = true
+enable = false
 #
 # Server host, default allow all
 #
@@ -109,29 +133,13 @@ host = 0.0.0.0
 #
 port = 1883
 #
-# A simple IEC-104 protocol server
-#
-[plugin.cs104_server]
-#
-# Enable
-#
-enable = true
-#
-# Server host, default allow all
-#
-host = 0.0.0.0
-#
-# Server port
-#
-port = 1501
-#
 # USB monitor
 #
 [plugin.usbmonitor]
 #
 # Enable
 #
-enable = true
+enable = false
 #
 # ICMP sender
 #
@@ -147,7 +155,7 @@ enable = true
 #
 # Enable
 #
-enable = true
+enable = false
 #
 # Server host, default allow all
 #
@@ -164,7 +172,7 @@ listen_port = 1994
 # If you want to use this feature, maybe should goto here for help:
 # https://github.com/tsl0922/ttyd
 #
-enable = true
+enable = false
 #
 # Server port
 #
@@ -185,7 +193,7 @@ enable = true
 #
 # Enable
 #
-enable = true
+enable = false
 #
 # Soft Watchdog
 #
@@ -193,7 +201,10 @@ enable = true
 #
 # Enable
 #
-enable = true
+enable = false
+#
+# Soft Watchdog
+#
 [plugin.license_manager]
 #
 # Enable
@@ -202,8 +213,8 @@ enable = true
 #
 # Enable
 #
-license_path = test/conf/license.lic
+license_path = ./license.lic
 #
 # Enable
 #
-key_path = test/conf/license.key
+key_path = ./license.key
