--- a/test/conf/rhilex.ini
+++ b/test/conf/rhilex.ini
@@ -1,19 +1,6 @@
-#------------------------------------------------------------------------------
-;  Copyright (C) 2023 wwhai
-;
-;  This program is free software: you can redistribute it and/or modify
-;  it under the terms of the GNU Affero General Public License as
-;  published by the Free Software Foundation, either version 3 of the
-;  License, or (at your option) any later version.
-;
-;  This program is distributed in the hope that it will be useful,
-;  but WITHOUT ANY WARRANTY; without even the implied warranty of
-;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-;  GNU Affero General Public License for more details.
-;
-;  You should have received a copy of the GNU Affero General Public License
-;  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#------------------------------------------------------------------------------
+#-----------------------------------------------------
+# Basic Config
+#-----------------------------------------------------
 [app]
 #
 # App name
@@ -24,15 +11,13 @@ app_name = rulex
 #
 app_id = rulex
 #
-# If enabled, log will output to console instead of log file
-# This option most used to debug exception
+# If enabled, log will output to console, other log to file
 #
-enable_console = false
+enable_console = true
 #
-# If enabled, will output more detail but a lot of log message
-# This option most used to debug exception
+# If enabled, will output a lot of log message
 #
-app_debug_mode = false
+app_debug_mode = true
 #
 # Log level:
 #    fatal
@@ -41,27 +26,15 @@ app_debug_mode = false
 #    debug
 #    info
 #
-log_level = info
+log_level = all
 #
 # log path
 #
-log_path = rulexlog
+log_path = rulex-log.txt
 #
-# Will compress log file when size(Mb) greater than config value
+# lua log path
 #
-log_max_size = 5
-#
-# Default count of saved Log file
-#
-log_max_backups = 2
-#
-# Max Save Interval of Log file
-#
-log_max_age = 7
-#
-# Will Compress log file to .gz format
-#
-log_compress = true
+lua_log_path = rulex-lua-log.txt
 #
 # Max data cache size
 #
@@ -89,16 +62,15 @@ enable_pprof = false
 # App Remote Update Server
 #
 update_server = http://localhost:8088/rulex
-#
-# CPU load Upper limit, 80%
-#
-cpu_load_upper_limit = 80
-
+#-----------------------------------------------------
+# External Lua Script
+#-----------------------------------------------------
 [extlibs]
 luafile=./extlualibs/hello.lua
-#
+
+#-----------------------------------------------------
 # Buildin Plugins Config
-#
+#-----------------------------------------------------
 [plugin]
 #
 # RULEX http api providor
@@ -117,13 +89,17 @@ host = 0.0.0.0
 #
 port = 2580
 #
+# Server port
+#
+dbpath = ./rhilex.db
+#
 # Lightweight Mqtt protocol server
 #
 [plugin.mqtt_server]
 #
 # Enable
 #
-enable = false
+enable = true
 #
 # Server host, default allow all
 #
@@ -133,13 +109,29 @@ host = 0.0.0.0
 #
 port = 1883
 #
+# A simple IEC-104 protocol server
+#
+[plugin.cs104_server]
+#
+# Enable
+#
+enable = true
+#
+# Server host, default allow all
+#
+host = 0.0.0.0
+#
+# Server port
+#
+port = 1501
+#
 # USB monitor
 #
 [plugin.usbmonitor]
 #
 # Enable
 #
-enable = false
+enable = true
 #
 # ICMP sender
 #
@@ -155,7 +147,7 @@ enable = true
 #
 # Enable
 #
-enable = false
+enable = true
 #
 # Server host, default allow all
 #
@@ -172,7 +164,7 @@ listen_port = 1994
 # If you want to use this feature, maybe should goto here for help:
 # https://github.com/tsl0922/ttyd
 #
-enable = false
+enable = true
 #
 # Server port
 #
@@ -193,7 +185,7 @@ enable = true
 #
 # Enable
 #
-enable = false
+enable = true
 #
 # Soft Watchdog
 #
@@ -201,10 +193,7 @@ enable = false
 #
 # Enable
 #
-enable = false
-#
-# Soft Watchdog
-#
+enable = true
 [plugin.license_manager]
 #
 # Enable
@@ -213,8 +202,8 @@ enable = true
 #
 # Enable
 #
-license_path = ./license.lic
+license_path = test/conf/license.lic
 #
 # Enable
 #
-key_path = ./license.key
+key_path = test/conf/license.key
