--- a/staticcheck.conf
+++ b/staticcheck.conf
@@ -1,1 +1,1 @@
-checks = ["all", "-ST1005", "-ST1003", "-ST1000", "-ST1020", "-ST1021"]
+checks = ["all", "-ST1005", "-ST1003", "-ST1000", "-ST1020", "-ST1021", "-ST1022"]
