dev: migrate core module

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -202,8 +202,8 @@ enable = true
 #
 # Enable
 #
-license_path = test/conf/license.lic
+license_path = test/config/license.lic
 #
 # Enable
 #
-key_path = test/conf/license.key
+key_path = test/config/license.key
