dev: optimize config; add frpc proxy template

--- a/config/rhilex-en-us.ini
+++ b/config/rhilex-en-us.ini
@@ -8,9 +8,9 @@ app_name = rhilex
 app_id = rhilex
 
 ; Whether to output logs to the console, mainly used for debugging exceptions
-enable_console = true
+enable_console = false
 ; Whether to enable detailed logging mode, also used for debugging
-app_debug_mode = true
+app_debug_mode = false
 ; Logging Level: fatal, error, warn, debug, info
 log_level = info
 ; Log File Path
@@ -56,7 +56,7 @@ port = 2580
 
 [plugin.mqtt_server]
 ; Whether to enable MQTT protocol server plugin
-enable = true
+enable = false
 ; Server host address, default allows all
 host = 0.0.0.0
 ; Server port
@@ -64,7 +64,7 @@ port = 1883
 
 [plugin.usbmonitor]
 ; Whether to enable USB monitoring plugin
-enable = true
+enable = false
 
 [plugin.icmpsender]
 ; Whether to enable ICMP sender plugin
@@ -72,7 +72,7 @@ enable = true
 
 [plugin.netdiscover]
 ; Whether to enable network discovery plugin
-enable = true
+enable = false
 ; Listening host address, default allows all
 listen_host = 0.0.0.0
 ; Listening port
@@ -80,7 +80,7 @@ listen_port = 1994
 
 [plugin.ttyd]
 ; Whether to enable Web terminal plugin
-enable = true
+enable = false
 ; Listening port
 listen_port = 7681
 
@@ -90,16 +90,34 @@ enable = true
 
 [plugin.modbus_crc_tools]
 ; Whether to enable Modbus CRC calculation tool plugin
-enable = true
+enable = false
 
 [plugin.soft_wdog]
 ; Whether to enable Software Watchdog plugin
-enable = true
+enable = false
 
 [plugin.license_manager]
 ; Whether to enable License Manager plugin
 enable = true
 ; License file path
-license_path = test/config/license.lic
+license_path = ./license.lic
 ; Key file path
-key_path = test/config/license.key
+key_path = ./license.key
+
+[plugin.frpc]
+; Enable plugin
+enable = true
+; Server address
+server_addr = "127.0.0.1"
+; FRPS listening port
+server_port = 7000
+; Plugin name
+name = "rhilex-web-dashboard"
+; Plugin type
+type = "tcp"
+; Local IP address
+local_ip = "127.0.0.1"
+; Local port
+local_port = 2580
+; Server proxy port
+remote_port = 60001
