dev: add frpc plugin config to test

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -103,3 +103,21 @@ enable = true
 license_path = test/config/license.lic
 ; Key file path
 key_path = test/config/license.key
+
+[plugin.frpc]
+; Enable plugin
+enable = true
+; Server address
+server_addr = "127.0.0.1"
+; FRPS listening port
+server_port = 7000
+; Plugin name
+name = "rhilex-web-dashboard"
+; Plugin type
+type = "tcp"
+; Local IP address
+local_ip = "127.0.0.1"
+; Local port
+local_port = 2580
+; Server proxy port
+remote_port = 60001
