dev: enahce ngrok; remove plugin license

--- a/config/rhilex-en-us.ini
+++ b/config/rhilex-en-us.ini
@@ -1,5 +1,5 @@
 #------------------------------------------------------------------------------
-;  Copyright (C) 2023 wwhai
+;  Copyright (C) 2023 RHILEX
 #------------------------------------------------------------------------------
 [app]
 ; Application Name
@@ -119,3 +119,18 @@ local_ip = "127.0.0.1"
 local_port = 2580
 ; Server proxy port
 remote_port = 60001
+
+[plugin.ngrokc]
+; Website: https://www.ngrok.com
+; Enable the plugin
+enable = true
+; Server endpoint address
+server_endpoint = "default"
+; Authentication token
+auth_token = "auth_token"
+; tcp | http | https
+local_schema = "http"
+; Local IP address
+local_host = "127.0.0.1"
+; Local port
+local_port = 2580
