--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -1,5 +1,5 @@
 #------------------------------------------------------------------------------
-;  Copyright (C) 2023 wwhai
+;  Copyright (C) 2023 RHILEX
 #------------------------------------------------------------------------------
 [app]
 ; Application Name
@@ -12,7 +12,7 @@ enable_console = true
 ; Whether to enable detailed logging mode, also used for debugging
 app_debug_mode = true
 ; Logging Level: fatal, error, warn, debug, info
-log_level = info
+log_level = debug
 ; Log File Path
 log_path = rhilex-log
 ; Maximum size of log file before compression (MB)
@@ -119,3 +119,18 @@ local_ip = "127.0.0.1"
 local_port = 2580
 ; Server proxy port
 remote_port = 60001
+
+[plugin.ngrokc]
+; Website: https://www.ngrok.com
+; Enable the plugin
+enable = true
+; Server endpoint address
+server_endpoint = "default"
+; Authentication token
+auth_token = "2dInwP3b8reiSrKTcVnlreCOU1b_5t9z3J7spaF4WwRF8o8gM"
+; tcp | http | https
+local_schema = "http"
+; Local IP address
+local_host = "127.0.0.1"
+; Local port
+local_port = 2580
