--- a/config/rhilex-en-us.ini
+++ b/config/rhilex-en-us.ini
@@ -122,10 +122,13 @@ remote_port = 60001
 
 [plugin.ngrokc]
 ; Website: https://www.ngrok.com
+
 ; Enable the plugin
 enable = true
 ; Server endpoint address
 server_endpoint = "default"
+; Ngrok domain
+domain = "default"
 ; Authentication token
 auth_token = "auth_token"
 ; tcp | http | https
