--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -122,12 +122,15 @@ remote_port = 60001
 
 [plugin.ngrokc]
 ; Website: https://www.ngrok.com
+
 ; Enable the plugin
 enable = true
 ; Server endpoint address
 server_endpoint = "default"
+; Ngrok domain
+domain = "default"
 ; Authentication token
-auth_token = "2dInwP3b8reiSrKTcVnlreCOU1b_5t9z3J7spaF4WwRF8o8gM"
+auth_token = "auth_token"
 ; tcp | http | https
 local_schema = "http"
 ; Local IP address
