dev: enhance ngrok log and context

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -128,9 +128,9 @@ enable = true
 ; Server endpoint address
 server_endpoint = "default"
 ; Ngrok domain
-domain = "default"
+domain = "workable-logically-tarpon.ngrok-free.app"
 ; Authentication token
-auth_token = "auth_token"
+auth_token = "2dInwP3b8reiSrKTcVnlreCOU1b_5t9z3J7spaF4WwRF8o8gM"
 ; tcp | http | https
 local_schema = "http"
 ; Local IP address
