dev: enhance generic uart

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -124,7 +124,7 @@ remote_port = 60001
 ; Website: https://www.ngrok.com
 
 ; Enable the plugin
-enable = true
+enable = false
 ; Server endpoint address
 server_endpoint = "default"
 ; Ngrok domain
