feat: add log options to global config

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -2,11 +2,8 @@
 ;  Copyright (C) 2023 RHILEX
 #------------------------------------------------------------------------------
 [app]
-; Application Name
-app_name = rhilex
 ; Application ID
 app_id = rhilex
-
 ; Whether to output logs to the console, mainly used for debugging exceptions
 enable_console = false
 ; Whether to enable detailed logging mode, also used for debugging
@@ -14,20 +11,19 @@ app_debug_mode = false
 ; Logging Level: fatal, error, warn, debug, info
 log_level = info
 ; Log File Path
-log_path = rhilex-log
+log_path = rhilexlog
 ; Maximum size of log file before compression (MB)
 log_max_size = 5
 ; Maximum number of saved log files
-log_max_backups = 2
+log_max_backups = 5
 ; Maximum age of log files (days)
 log_max_age = 7
 ; Whether to compress log files
 log_compress = true
-
 ; Maximum data cache size
 max_queue_size = 102400
 ; Maximum storage size, default is 20MB
-max_store_size = 1024
+max_kv_store_size = 1024
 ; Resource restart interval, in microseconds
 resource_restart_interval = 5000
 ; Maximum number of processes in Golang runtime, if 0, uses system default
@@ -37,7 +33,7 @@ enable_pprof = false
 ; Maximum CPU load percentage
 cpu_load_upper_limit = 80
 
-[extlibs]
+[ext_libs]
 ; Lua External Library File Path
 luafile=./extlualibs/hello.lua
 
@@ -88,7 +84,7 @@ enable = true
 
 [plugin.modbus_crc_tools]
 ; Whether to enable Modbus CRC calculation tool plugin
-enable = false
+enable = true
 
 [plugin.soft_wdog]
 ; Whether to enable Software Watchdog plugin
