--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -2,11 +2,8 @@
 ;  Copyright (C) 2023 RHILEX
 #------------------------------------------------------------------------------
 [app]
-; Application Name
-app_name = rhilex
 ; Application ID
 app_id = rhilex
-
 ; Whether to output logs to the console, mainly used for debugging exceptions
 enable_console = true
 ; Whether to enable detailed logging mode, also used for debugging
@@ -14,20 +11,19 @@ app_debug_mode = true
 ; Logging Level: fatal, error, warn, debug, info
 log_level = debug
 ; Log File Path
-log_path = rhilex-log
+log_path = rhilexlog
 ; Maximum size of log file before compression (MB)
 log_max_size = 5
 ; Maximum number of saved log files
-log_max_backups = 2
+log_max_backups = 5
 ; Maximum age of log files (days)
 log_max_age = 7
 ; Whether to compress log files
 log_compress = true
-
 ; Maximum data cache size
 max_queue_size = 102400
 ; Maximum storage size, default is 20MB
-max_store_size = 1024
+max_kv_store_size = 1024
 ; Resource restart interval, in microseconds
 resource_restart_interval = 5000
 ; Maximum number of processes in Golang runtime, if 0, uses system default
@@ -37,7 +33,7 @@ enable_pprof = false
 ; Maximum CPU load percentage
 cpu_load_upper_limit = 80
 
-[extlibs]
+[ext_libs]
 ; Lua External Library File Path
 luafile=./extlualibs/hello.lua
 
@@ -54,7 +50,7 @@ port = 2580
 
 [plugin.mqtt_server]
 ; Whether to enable MQTT protocol server plugin
-enable = true
+enable = false
 ; Server host address, default allows all
 host = 0.0.0.0
 ; Server port
@@ -62,7 +58,7 @@ port = 1883
 
 [plugin.usbmonitor]
 ; Whether to enable USB monitoring plugin
-enable = true
+enable = false
 
 [plugin.icmpsender]
 ; Whether to enable ICMP sender plugin
@@ -70,7 +66,7 @@ enable = true
 
 [plugin.netdiscover]
 ; Whether to enable network discovery plugin
-enable = true
+enable = false
 ; Listening host address, default allows all
 listen_host = 0.0.0.0
 ; Listening port
@@ -78,7 +74,7 @@ listen_port = 1994
 
 [plugin.ttyd]
 ; Whether to enable Web terminal plugin
-enable = true
+enable = false
 ; Listening port
 listen_port = 7681
 
@@ -92,45 +88,25 @@ enable = true
 
 [plugin.soft_wdog]
 ; Whether to enable Software Watchdog plugin
-enable = true
+enable = false
 
 [plugin.license_manager]
-; Whether to enable License Manager plugin
-enable = true
 ; License file path
-license_path = test/config/license.lic
+license_path = ./test/config/license.lic
 ; Key file path
-key_path = test/config/license.key
-
-[plugin.frpc]
-; Enable plugin
-enable = true
-; Server address
-server_addr = "127.0.0.1"
-; FRPS listening port
-server_port = 7000
-; Plugin name
-name = "rhilex-web-dashboard"
-; Plugin type
-type = "tcp"
-; Local IP address
-local_ip = "127.0.0.1"
-; Local port
-local_port = 2580
-; Server proxy port
-remote_port = 60001
+key_path = ./test/config/license.key
 
 [plugin.ngrokc]
 ; Website: https://www.ngrok.com
 
 ; Enable the plugin
-enable = false
+enable = true
 ; Server endpoint address
 server_endpoint = "default"
 ; Ngrok domain
-domain = "workable-logically-tarpon.ngrok-free.app"
+domain = "default"
 ; Authentication token
-auth_token = "2dInwP3b8reiSrKTcVnlreCOU1b_5t9z3J7spaF4WwRF8o8gM"
+auth_token = "auth_token"
 ; tcp | http | https
 local_schema = "http"
 ; Local IP address
