--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -32,10 +32,10 @@ gomax_procs = 0
 enable_pprof = false
 ; Maximum CPU load percentage
 cpu_load_upper_limit = 80
-
-[ext_libs]
+; Dataschema API secret
+dataschema_secrets = rhilex-secret
 ; Lua External Library File Path
-luafile=./extlualibs/hello.lua
+ext_libs=./extlualibs/hello.lua
 
 [plugin]
 ; Plugin Configuration Section
