fix: fix rw check failed

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -92,9 +92,9 @@ enable = false
 
 [plugin.license_manager]
 ; License file path
-license_path = ./test/config/license.lic
+license_path = ./test/config/private_key.pem
 ; Key file path
-key_path = ./test/config/license.key
+key_path = ./test/config/cipher
 
 [plugin.ngrokc]
 ; Website: https://www.ngrok.com
