--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -35,7 +35,7 @@ cpu_load_upper_limit = 80
 ; Dataschema API secret
 dataschema_secrets = rhilex-secret
 ; Lua External Library File Path
-ext_libs=./extlualibs/hello.lua
+; ext_libs=./extlualibs/hello.lua
 
 [plugin]
 ; Plugin Configuration Section
