dev: update mqtt config

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -35,7 +35,7 @@ cpu_load_upper_limit = 80
 ; Dataschema API secret
 dataschema_secrets = rhilex-secret
 ; Lua External Library File Path
-ext_libs=./extlualibs/hello.lua
+ext_libs=./test/extlualibs/hello.lua
 
 [plugin]
 ; Plugin Configuration Section
@@ -92,9 +92,9 @@ enable = false
 
 [plugin.license_manager]
 ; License file path
-license_path = ./test/config/private_key.pem
+license_path = ./test/config/license.lic
 ; Key file path
-key_path = ./test/config/cipher
+key_path = ./test/config/license.key
 
 [plugin.ngrokc]
 ; Website: https://www.ngrok.com
