--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -100,7 +100,7 @@ key_path = ./license.key
 ; Website: https://www.ngrok.com
 
 ; Enable the plugin
-enable = true
+enable = false
 ; Server endpoint address
 server_endpoint = "default"
 ; Ngrok domain
