fix: fix mqtt client auth failure

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -50,11 +50,11 @@ port = 2580
 
 [plugin.mqtt_server]
 ; Whether to enable MQTT protocol server plugin
-enable = false
+enable = true
 ; Server host address, default allows all
 host = 0.0.0.0
 ; Server port
-port = 1883
+port = 1885
 
 [plugin.usbmonitor]
 ; Whether to enable USB monitoring plugin
