dev: change rhilex workspace

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -11,7 +11,7 @@ app_debug_mode = false
 ; Logging Level: fatal, error, warn, debug, info
 log_level = info
 ; Log File Path
-log_path = rhilexlog
+log_path = rhilex-running-log
 ; Maximum size of log file before compression (MB)
 log_max_size = 5
 ; Maximum number of saved log files
