dev: enhance lora udp forwarder

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -35,7 +35,7 @@ cpu_load_upper_limit = 80
 ; Dataschema API secret
 dataschema_secrets = rhilex-secret
 ; Lua External Library File Path
-ext_libs=./test/extlualibs/hello.lua
+; ext_libs=./test/extlualibs/hello.lua
 
 [plugin]
 ; Plugin Configuration Section
