dev: update default config

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -128,7 +128,7 @@ address = /dev/ttyUSB1
 
 [transceiver.atk01]
 # Address: Device is on COM3 serial port for communication
-address = COM3
+address = /dev/ttyUSB0
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
 io_timeout = 30
 # at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
@@ -144,7 +144,7 @@ stop_bits = 1
 
 [transceiver.cvtd01]
 # Address: Device is on COM3 serial port for communication
-address = COM3
+address = /dev/ttyUSB0
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
 io_timeout = 30
 # at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
