dev: enhance protocol check

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -9,7 +9,7 @@ enable_console = true
 ; Whether to enable detailed logging mode, also used for debugging
 app_debug_mode = true
 ; Logging Level: fatal, error, warn, debug, info
-log_level = all
+log_level = debug
 ; Log File Path
 log_path = rhilexlog
 ; Maximum size of log file before compression (MB)
@@ -136,13 +136,13 @@ address = /dev/ttyUSB1
 
 [transceiver.atk01]
 # Address: Device is on COM3 serial port for communication
-address = COM7
+address = COM17
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
 io_timeout = 30
 # at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
 at_timeout = 200
 # BaudRate: Data transfer speed set to standard 9600 baud
-baudrate = 9600
+baudrate = 115200
 # DataBits: Each character uses 8 bits for transmission
 data_bits = 8
 # Parity: parity ('N' 'O' 'D') check, if additional bits for error detection
