feat: add telemetry plugin

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -96,6 +96,12 @@ license_path = ./test/config/license.lic
 ; Key file path
 key_path = ./test/config/license.key
 
+[plugin.telemetry]
+# Whether to enable Web terminal plugin
+enable = true
+# Server address
+server_addr = 127.0.0.1:9998
+
 [plugin.ngrokc]
 ; Website: https://www.ngrok.com
 
