--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -62,6 +62,12 @@ enable = false
 # Listening port
 listen_port = 7681
 
+[plugin.telemetry]
+# Whether to enable Web terminal plugin
+enable = false
+# Server address
+server_addr = 127.0.0.1:7890
+
 [plugin.modbus_scanner]
 # Whether to enable Modbus scanner plugin
 enable = true
