dev: enhance transceiver

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -99,26 +99,6 @@ local_host = "127.0.0.1"
 # Local port
 local_port = 2580
 
-[transceiver.mx01]
-# Address: Device is on COM3 serial port for communication
-address = COM3
-# io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
-io_timeout = 30
-# at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
-at_timeout = 200
-# BaudRate: Data transfer speed set to standard 9600 baud
-baudrate = 9600
-# DataBits: Each character uses 8 bits for transmission
-data_bits = 8
-# Parity: parity ('N' 'O' 'D') check, if additional bits for error detection
-parity = N
-# Stopbits: Single stop bit (1) marks end of each character transmission
-stop_bits = 1
-
-[transceiver.ec200a]
-# Address: Device is on /dev/ttyUSB1 serial port for communication
-address = /dev/ttyUSB1
-
 [transceiver.atk01]
 # Address: Device is on COM3 serial port for communication
 address = /dev/ttyUSB0
@@ -134,3 +114,5 @@ data_bits = 8
 parity = N
 # Stopbits: Single stop bit (1) marks end of each character transmission
 stop_bits = 1
+# Transport Protocol: 1|2|3, goto homepage for detail
+transport_protocol = 1
