dev: enhance rule engine

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -100,7 +100,7 @@ local_host = "127.0.0.1"
 local_port = 2580
 
 [transceiver.atk01]
-# Address: Device is on COM3 serial port for communication
+# Address: serial port name
 address = /dev/ttyUSB0
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
 io_timeout = 30
