dev: optimize Telemetry

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -99,8 +99,8 @@ key_path = ./test/config/license.key
 [plugin.telemetry]
 # Whether to enable Web terminal plugin
 enable = true
-# Server address
-server_addr = 127.0.0.1:9998
+# Telemetry Server address
+server_addr = 106.15.227.172:8891
 
 [plugin.ngrokc]
 ; Website: https://www.ngrok.com
