--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -64,9 +64,9 @@ listen_port = 7681
 
 [plugin.telemetry]
 # Whether to enable Web terminal plugin
-enable = false
-# Server address
-server_addr = 127.0.0.1:7890
+enable = true
+# Telemetry Server address
+server_addr = 106.15.227.172:8891
 
 [plugin.modbus_scanner]
 # Whether to enable Modbus scanner plugin
@@ -84,6 +84,7 @@ key_path = ./license.key
 
 [plugin.ngrokc]
 # Website: https://www.ngrok.com
+
 # Enable the plugin
 enable = false
 # Server endpoint address
