--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -1,100 +1,66 @@
 #------------------------------------------------------------------------------
-;  Copyright (C) 2023 RHILEX
+#  Copyright (C) 2023-2033 RHILEX
 #------------------------------------------------------------------------------
 [app]
-; Application ID
+# Application ID
 app_id = rhilex
-; Whether to output logs to the console, mainly used for debugging exceptions
+# Whether to output logs to the console, mainly used for debugging exceptions
 enable_console = true
-; Whether to enable detailed logging mode, also used for debugging
+# Whether to enable detailed logging mode, also used for debugging
 app_debug_mode = true
-; Logging Level: fatal, error, warn, debug, info
-log_level = info
-; Log File Path
-log_path = rhilexlog
-; Maximum size of log file before compression (MB)
+# Logging Level: fatal, error, warn, debug, info
+log_level = debug
+# Log File Path
+log_path = rhilex-running-log
+# Maximum size of log file before compression (MB)
 log_max_size = 5
-; Maximum number of saved log files
+# Maximum number of saved log files
 log_max_backups = 5
-; Maximum age of log files (days)
+# Maximum age of log files (days)
 log_max_age = 7
-; Whether to compress log files
+# Whether to compress log files
 log_compress = true
-; Maximum data cache size
+# Maximum data cache size
 max_queue_size = 10240
-; Maximum storage size, default is 20MB
+# Maximum storage size, default is 20MB
 max_kv_store_size = 1024
-; Resource restart interval, in microseconds
+# Resource restart interval, in microseconds
 resource_restart_interval = 5000
-; Maximum number of processes in Golang runtime, if 0, uses system default
+# Maximum number of processes in Golang runtime, if 0, uses system default
 gomax_procs = 0
-; Whether to enable PProf performance analysis tool
+# Whether to enable PProf performance analysis tool
 enable_pprof = false
-; Maximum CPU load percentage
+# Maximum CPU load percentage
 cpu_load_upper_limit = 80
-; Dataschema API secret
+# Dataschema API secret
 dataschema_secrets = rhilex-secret
-; Lua External Library File Path
-; ext_libs=./test/extlualibs/hello.lua
+# Lua External Library File Path
+# ext_libs=./extlualibs/hello.lua
 
 [plugin]
-; Plugin Configuration Section
+# Plugin Configuration Section
 
 [plugin.http_server]
-; Whether to enable HTTP API provider plugin
+# Whether to enable HTTP API provider plugin
 enable = true
-; Server host address, default allows all
+# Server host address, default allows all
 host = 0.0.0.0
-; Server port
+# Server port
 port = 2580
 
-[plugin.mqtt_server]
-; Whether to enable MQTT protocol server plugin
-enable = true
-; Server host address, default allows all
-host = 0.0.0.0
-; Server port
-port = 1885
-
 [plugin.usbmonitor]
-; Whether to enable USB monitoring plugin
+# Whether to enable USB monitoring plugin
 enable = false
 
 [plugin.icmpsender]
-; Whether to enable ICMP sender plugin
+# Whether to enable ICMP sender plugin
 enable = true
-
-[plugin.netdiscover]
-; Whether to enable network discovery plugin
-enable = false
-; Listening host address, default allows all
-listen_host = 0.0.0.0
-; Listening port
-listen_port = 1994
 
 [plugin.ttyd]
-; Whether to enable Web terminal plugin
+# Whether to enable Web terminal plugin
 enable = false
-; Listening port
+# Listening port
 listen_port = 7681
-
-[plugin.modbus_scanner]
-; Whether to enable Modbus scanner plugin
-enable = true
-
-[plugin.modbus_crc_tools]
-; Whether to enable Modbus CRC calculation tool plugin
-enable = true
-
-[plugin.soft_wdog]
-; Whether to enable Software Watchdog plugin
-enable = false
-
-[plugin.license_manager]
-; License file path
-license_path = ./test/config/license.lic
-; Key file path
-key_path = ./test/config/license.key
 
 [plugin.telemetry]
 # Whether to enable Web terminal plugin
@@ -102,27 +68,41 @@ enable = true
 # Telemetry Server address
 server_addr = 106.15.227.172:8891
 
-[plugin.ngrokc]
-; Website: https://www.ngrok.com
+[plugin.modbus_scanner]
+# Whether to enable Modbus scanner plugin
+enable = true
 
-; Enable the plugin
+[plugin.modbus_crc_tools]
+# Whether to enable Modbus CRC calculation tool plugin
+enable = true
+
+[plugin.license_manager]
+# License file path
+license_path = ./license.lic
+# Key file path
+key_path = ./license.key
+
+[plugin.ngrokc]
+# Website: https://www.ngrok.com
+
+# Enable the plugin
 enable = false
-; Server endpoint address
+# Server endpoint address
 server_endpoint = "default"
-; Ngrok domain
+# Ngrok domain
 domain = "default"
-; Authentication token
+# Authentication token
 auth_token = "auth_token"
-; tcp | http | https
+# tcp | http | https
 local_schema = "http"
-; Local IP address
+# Local IP address
 local_host = "127.0.0.1"
-; Local port
+# Local port
 local_port = 2580
 
 [transceiver.atk01]
-# Address: Device is on COM3 serial port for communication
-address = COM4
+# Address: serial port name
+address = /dev/ttyUSB0
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
 io_timeout = 30
 # at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
