--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -78,9 +78,9 @@ enable = true
 
 [plugin.license_manager]
 # License file path
-license_path = ./license.lic
-# Key file path
-key_path = ./license.key
+license_path = ./test/config/license.lic
+; Key file path
+key_path = ./test/config/license.key
 
 [plugin.ngrokc]
 # Website: https://www.ngrok.com
