dev: remove unused plugin

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -50,7 +50,7 @@ port = 2580
 
 [plugin.usbmonitor]
 # Whether to enable USB monitoring plugin
-enable = false
+enable = true
 
 [plugin.icmpsender]
 # Whether to enable ICMP sender plugin
