dev: add local lost data cache size to config

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -22,6 +22,8 @@ log_max_age = 7
 log_compress = true
 # Maximum data cache size
 max_queue_size = 10240
+# Maximum lost data cache
+max_lost_cache_size = 10000
 # Maximum storage size, default is 20MB
 max_kv_store_size = 1024
 # Resource restart interval, in microseconds
