--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -1,6 +1,31 @@
-#------------------------------------------------------------------------------
-#  Copyright (C) 2023-2033 RHILEX
-#------------------------------------------------------------------------------
+; ----------------------------------------------------------------------------
+; AGPLv2 License Notice
+;
+; This file is part of RHILEX.
+;
+; RHILEX is free software: you can redistribute it and/or modify
+; it under the terms of the GNU Affero General Public License as published by
+; the Free Software Foundation, either version 2 of the License, or
+; (at your option) any later version.
+;
+; RHILEX is distributed in the hope that it will be useful,
+; but WITHOUT ANY WARRANTY; without even the implied warranty of
+; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+; GNU Affero General Public License for more details.
+;
+; You should have received a copy of the GNU Affero General Public License
+; along with RHILEX. If not, see <http://www.gnu.org/licenses/>.
+;
+; RHILEX Copyright (C) 2024-2034 wangwenhai
+;
+; Please contact the author(s) of this software by email if you have any
+; questions or comments regarding this license.
+;
+; For more information, visit:
+; https://www.hootrhino.com
+;
+; ----------------------------------------------------------------------------
+
 [app]
 # Application ID
 app_id = rhilex
