fix: fix nil panic

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -9,7 +9,7 @@ enable_console = true
 # Whether to enable detailed logging mode, also used for debugging
 app_debug_mode = true
 # Logging Level: fatal, error, warn, debug, info
-log_level = debug
+log_level = all
 # Log File Path
 log_path = rhilex-running-log
 # Maximum size of log file before compression (MB)
