dev: enhance protocol

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -102,9 +102,9 @@ local_port = 2580
 
 [transceiver.atk01]
 # Address: serial port name
-address = /dev/ttyUSB0
+address = COM16
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
-io_timeout = 30
+io_timeout = 0
 # at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
 at_timeout = 200
 # BaudRate: Data transfer speed set to standard 9600 baud
