dev: enhance transceiver

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -100,7 +100,7 @@ local_host = "127.0.0.1"
 # Local port
 local_port = 2580
 
-[transceiver.atk01]
+[transceiver.default_transceiver]
 # Address: serial port name
 address = COM16
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
