--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -127,7 +127,9 @@ local_host = "127.0.0.1"
 # Local port
 local_port = 2580
 
-[transceiver.atk01]
+[transceiver.default_transceiver]
+# Device Name
+name = default_transceiver
 # Address: serial port name
 address = /dev/ttyUSB0
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
