dev: enhance load transceiver

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -127,9 +127,11 @@ local_host = "127.0.0.1"
 # Local port
 local_port = 2580
 
+[transceiver]
+# default transceiver
 [transceiver.default_transceiver]
-# Device Name
-name = default_transceiver
+# Whether to enable default transceiver
+enable = false
 # Address: serial port name
 address = /dev/ttyUSB0
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
