--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -100,9 +100,13 @@ local_host = "127.0.0.1"
 # Local port
 local_port = 2580
 
+[transceiver]
+# default transceiver
 [transceiver.default_transceiver]
+# Whether to enable default transceiver
+enable = false
 # Address: serial port name
-address = COM16
+address = /dev/ttyUSB0
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
 io_timeout = 0
 # at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
