dev: add DNS Server

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -1,31 +1,3 @@
-; ----------------------------------------------------------------------------
-; AGPLv2 License Notice
-;
-; This file is part of RHILEX.
-;
-; RHILEX is free software: you can redistribute it and/or modify
-; it under the terms of the GNU Affero General Public License as published by
-; the Free Software Foundation, either version 2 of the License, or
-; (at your option) any later version.
-;
-; RHILEX is distributed in the hope that it will be useful,
-; but WITHOUT ANY WARRANTY; without even the implied warranty of
-; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-; GNU Affero General Public License for more details.
-;
-; You should have received a copy of the GNU Affero General Public License
-; along with RHILEX. If not, see <http://www.gnu.org/licenses/>.
-;
-; RHILEX Copyright (C) 2024-2034 wangwenhai
-;
-; Please contact the author(s) of this software by email if you have any
-; questions or comments regarding this license.
-;
-; For more information, visit:
-; https://www.hootrhino.com
-;
-; ----------------------------------------------------------------------------
-
 [app]
 # Application ID
 app_id = rhilex
@@ -68,7 +40,6 @@ dataschema_secrets = rhilex-secret
 # Plugin Configuration Section
 
 [plugin.http_server]
-# Whether to enable HTTP API provider plugin
 enable = true
 # Server host address, default allows all
 host = 0.0.0.0
@@ -76,32 +47,29 @@ host = 0.0.0.0
 port = 2580
 
 [plugin.usbmonitor]
-# Whether to enable USB monitoring plugin
 enable = true
 
 [plugin.icmpsender]
-# Whether to enable ICMP sender plugin
 enable = true
 
 [plugin.ttyd]
-# Whether to enable Web terminal plugin
 enable = false
 # Listening port
 listen_port = 7681
 
 [plugin.telemetry]
-# Whether to enable Web terminal plugin
 enable = true
 # Telemetry Server address
 server_addr = 106.15.225.172:64002
 
 [plugin.modbus_scanner]
-# Whether to enable Modbus scanner plugin
 enable = true
 
 [plugin.modbus_crc_tools]
-# Whether to enable Modbus CRC calculation tool plugin
 enable = true
+
+[plugin.tinydns_server]
+enable = false
 
 [plugin.license_manager]
 # License file path
@@ -130,7 +98,6 @@ local_port = 2580
 [transceiver]
 # default transceiver
 [transceiver.default_transceiver]
-# Whether to enable default transceiver
 enable = false
 # Address: serial port name
 address = /dev/ttyUSB0
