dev: add ngrok test

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -86,17 +86,17 @@ key_path = ./test/config/license.key
 # Website: https://www.ngrok.com
 
 # Enable the plugin
-enable = false
+enable = true
 # Server endpoint address
 server_endpoint = "default"
 # Ngrok domain
-domain = "default"
+domain = "workable-logically-tarpon.ngrok-free.app"
 # Authentication token
-auth_token = "auth_token"
+auth_token = "2oNcHbujK434aLKyaZVaSe655b6_3ZrEau5GTbqkTGutMjq6E"
 # tcp | http | https
 local_schema = "http"
 # Local IP address
-local_host = "127.0.0.1"
+local_host = "192.168.10.202"
 # Local port
 local_port = 2580
 
