dev: optimize config

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -4,11 +4,9 @@ app_id = rhilex
 # Whether to output logs to the console, mainly used for debugging exceptions
 enable_console = false
 # Whether to enable detailed logging mode, also used for debugging
-app_debug_mode = false
+debug_mode = false
 # Logging Level: fatal, error, warn, debug, info
 log_level = info
-# Log File Path
-log_path = rhilex-running-log
 # Maximum size of log file before compression (MB)
 log_max_size = 5
 # Maximum number of saved log files
