--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -7,7 +7,7 @@ app_id = rhilex
 # Whether to output logs to the console, mainly used for debugging exceptions
 enable_console = true
 # Whether to enable detailed logging mode, also used for debugging
-app_debug_mode = true
+debug_mode = true
 # Logging Level: fatal, error, warn, debug, info
 log_level = all
 # Log File Path
@@ -96,7 +96,7 @@ auth_token = "2oNcHbujK434aLKyaZVaSe655b6_3ZrEau5GTbqkTGutMjq6E"
 # tcp | http | https
 local_schema = "http"
 # Local IP address
-local_host = "192.168.10.202"
+local_host = "192.168.10.3"
 # Local port
 local_port = 2580
 
