--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -86,7 +86,7 @@ key_path = ./test/config/license.key
 # Website: https://www.ngrok.com
 
 # Enable the plugin
-enable = true
+enable = false
 # Server endpoint address
 server_endpoint = "default"
 # Ngrok domain
