dev: update telemetry server

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -56,7 +56,7 @@ listen_port = 7681
 [plugin.telemetry]
 enable = true
 # Telemetry Server address
-server_addr = 106.15.225.172:64002
+server_addr = telemetry.hootrhino.com
 
 [plugin.modbus_scanner]
 enable = true
