dev: optimize Rhilex Config

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -1,7 +1,7 @@
 #------------------------------------------------------------------------------
 #  Copyright (C) 2023-2033 RHILEX
 #------------------------------------------------------------------------------
-[app]
+[main]
 # Application ID
 app_id = rhilex
 # Whether to output logs to the console, mainly used for debugging exceptions
