--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -1,4 +1,7 @@
-[app]
+#------------------------------------------------------------------------------
+#  Copyright (C) 2023-2033 RHILEX
+#------------------------------------------------------------------------------
+[main]
 # Application ID
 app_id = rhilex
 # Whether to output logs to the console, mainly used for debugging exceptions
