dev: add DiscoverPlugin

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -94,6 +94,19 @@ local_host = "127.0.0.1"
 # Local port
 local_port = 2580
 
+# default discover
+[plugin.discover]
+# Enable the plugin
+enable = true
+# Node Name
+node_name = rhilex@local.node
+# Node Token
+token = rhilex_secret_token
+# Discovery interval (m)
+broadcast_interval = 5
+# Discovery port
+udp_port = 2590
+
 [transceiver]
 # default transceiver
 [transceiver.default_transceiver]
