--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -100,6 +100,19 @@ local_host = "192.168.10.3"
 # Local port
 local_port = 2580
 
+# default discover
+[plugin.discover]
+# Enable the plugin
+enable = true
+# Node Name
+node_name = rhilex@local.node
+# Node Token
+token = rhilex_secret_token
+# Discovery interval (m)
+broadcast_interval = 5
+# Discovery port
+udp_port = 2590
+
 [transceiver]
 # default transceiver
 [transceiver.default_transceiver]
