dev: add micro dhcp server

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -107,6 +107,29 @@ broadcast_interval = 5
 # Discovery port
 udp_port = 2590
 
+[plugin.microdhcp]
+# Enable the microdhcp plugin
+enable = true
+# IP address to listen on for microdhcp.
+# Setting to 0.0.0.0 means it listens on all available network interfaces
+listen_ip = 0.0.0.0
+# Port to listen on for microdhcp. DHCP uses port 67 by default.
+listen_port = 67
+# Static address mapping. You can map MAC addresses to fixed IP addresses.
+# Format: MAC=IP, e.g., 00:11:22:33:44:55=192.168.1.100
+static_address_mapping = ""
+# Optional: DHCP range for dynamically allocated IPs.
+# Specify the start and end of the IP range for dynamic assignment
+dhcp_range_start = 192.168.1.200
+dhcp_range_end = 192.168.1.250
+# Optional: Set the lease time (in seconds) for DHCP clients.
+# This is the maximum time a device can use its IP address before it needs to renew.
+dhcp_lease_time = 86400  # 24 hours
+# Optional: List of DNS servers provided by DHCP.
+dns_servers = "8.8.8.8, 8.8.4.4"
+# Optional: Set the default gateway IP address for DHCP clients.
+gateway_ip = "192.168.1.1"
+
 [transceiver]
 # default transceiver
 [transceiver.default_transceiver]
