dev: enhance transceiver

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -103,7 +103,7 @@ local_port = 2580
 # default discover
 [plugin.discover]
 # Enable the plugin
-enable = true
+enable = false
 # Node Name
 node_name = rhilex@local.node
 # Node Token
@@ -117,13 +117,11 @@ udp_port = 2590
 # default transceiver
 [transceiver.default_transceiver]
 # Whether to enable default transceiver
-enable = false
+enable = true
 # Address: serial port name
-address = /dev/ttyUSB0
+address = COM16
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
-io_timeout = 0
-# at_timeout: Timeout for AT cmds (200 ms), adjusts responsiveness
-at_timeout = 200
+io_timeout = 50
 # BaudRate: Data transfer speed set to standard 9600 baud
 baudrate = 9600
 # DataBits: Each character uses 8 bits for transmission
