dev: add tunnel config

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -121,6 +121,7 @@ static_address_mapping = ""
 # Optional: DHCP range for dynamically allocated IPs.
 # Specify the start and end of the IP range for dynamic assignment
 dhcp_range_start = 192.168.1.200
+# Specify the end of the IP range for dynamic assignment
 dhcp_range_end = 192.168.1.250
 # Optional: Set the lease time (in seconds) for DHCP clients.
 # This is the maximum time a device can use its IP address before it needs to renew.
@@ -129,6 +130,16 @@ dhcp_lease_time = 86400  # 24 hours
 dns_servers = "8.8.8.8, 8.8.4.4"
 # Optional: Set the default gateway IP address for DHCP clients.
 gateway_ip = "192.168.1.1"
+
+[plugin.microtunnel]
+# Enable the plugin
+enable = true
+# Server endpoint address
+server_addr = 127.0.0.1:8080
+# Token
+token = rhilex
+# Local IP address and port
+local_addr = 127.0.0.1:80,127.0.0.1:80
 
 [transceiver]
 # default transceiver
