feat: add terminal Pty

--- a/config/rhilex.ini
+++ b/config/rhilex.ini
@@ -51,7 +51,7 @@ enable = true
 [plugin.icmpsender]
 enable = true
 
-[plugin.ttyd]
+[plugin.webterminal]
 enable = false
 # Listening port
 listen_port = 7681
@@ -62,9 +62,6 @@ enable = true
 server_addr = telemetry.hootrhino.com
 
 [plugin.modbus_scanner]
-enable = true
-
-[plugin.modbus_crc_tools]
 enable = true
 
 [plugin.tinydns_server]
@@ -125,7 +122,7 @@ dhcp_range_start = 192.168.1.200
 dhcp_range_end = 192.168.1.250
 # Optional: Set the lease time (in seconds) for DHCP clients.
 # This is the maximum time a device can use its IP address before it needs to renew.
-dhcp_lease_time = 86400  # 24 hours
+dhcp_lease_time = 86400          # 24 hours
 # Optional: List of DNS servers provided by DHCP.
 dns_servers = "8.8.8.8, 8.8.4.4"
 # Optional: Set the default gateway IP address for DHCP clients.
