--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -56,11 +56,11 @@ enable = false
 # Whether to enable ICMP sender plugin
 enable = true
 
-[plugin.ttyd]
+[plugin.webterminal]
 # Whether to enable Web terminal plugin
-enable = false
+enable = true
 # Listening port
-listen_port = 7681
+listen_port = 2579
 
 [plugin.telemetry]
 # Whether to enable Web terminal plugin
