feat: add web terminal

--- a/test/config/rhilex.ini
+++ b/test/config/rhilex.ini
@@ -117,7 +117,7 @@ udp_port = 2590
 # default transceiver
 [transceiver.default_transceiver]
 # Whether to enable default transceiver
-enable = true
+enable = false
 # Address: serial port name
 address = COM16
 # io_timeout: Timeout for I/O ops (30 sec), prevents indefinite waiting
